--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
 
 
 	<dependencies>
+		<!--Sql api for connecting java-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
+</dependency>
 
 		<!-- JUnit Jupiter API for writing tests -->
 		<dependency>
